--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>Tips and Tricks</h1>
     </header>
     <nav>
         <a href="#papercrafts">Papercrafts</a>
@@ -57,7 +57,7 @@
     </nav>
     <section id="papercrafts">
         <h2>Papercrafts</h2>
-        <p>This is a test text for my ideas projects.</p>
+        <p>My ideas here.</p>
     </section>
     <section id="roblox-tricks">
         <h2>Roblox Tricks</h2>
@@ -65,7 +65,7 @@
     </section>
     <section id="about">
         <h2>About</h2>
-        <p>Anything else.</p>
+        <p>This is a website for ideas</p>
     </section>
     <footer>
         <p>&copy; 2025 My Website</p>
