--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             padding: 0;
         }
         header {
-            background-color: #4CAF50;
+            background-color: #dca50c;
             color: white;
             text-align: center;
             padding: 1rem 0;
@@ -57,11 +57,17 @@
     </nav>
     <section id="papercrafts">
         <h2>Papercrafts</h2>
-        <p>My ideas here.</p>
+        <h3>Rocket ship.</h3>
+        <p>This is my guide to make a rocket ship.</p>
+        <h3>Paper airplane</h3>
+        <p>Learn how to make a simple paper airplane. It's a fun and easy craft that flies well.</p>
+        <h3>Paper boat</h3>
+        <p>Make a paper boat that you can float on water. It's perfect for a rainy day activity.</p>
     </section>
     <section id="roblox-tricks">
         <h2>Roblox Tricks</h2>
-        <p>Rocket ship.</p>
+        <h3>2 player games</h3>
+        <p>do you want to learn how to play games with your friends?</p>
     </section>
     <section id="about">
         <h2>About</h2>
