--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
     </nav>
     <section id="papercrafts">
         <h2>Papercrafts</h2>
-        <h3>Rocket ship.</h3>
+        <h3><a href="rocket_ship.html">Rocket ship</a></h3>
         <p>This is my guide to make a rocket ship.</p>
-        <h3>Paper airplane</h3>
+        <h3><a href="paper_airplane.html">Paper airplane</a></h3>
         <p>Learn how to make a simple paper airplane. It's a fun and easy craft that flies well.</p>
-        <h3>Paper boat</h3>
+        <h3><a href="paper_boat.html">Paper boat</a></h3>
         <p>Make a paper boat that you can float on water. It's perfect for a rainy day activity.</p>
     </section>
     <section id="roblox-tricks">
