--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Davide Kurek website</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -11,7 +11,7 @@
             padding: 0;
         }
         header {
-            background-color: #dca50c;
+            background-color: rgb(220, 165, 12);
             color: white;
             text-align: center;
             padding: 1rem 0;
@@ -19,7 +19,7 @@
         nav {
             display: flex;
             justify-content: center;
-            background-color: #333;
+            background-color: #09f8f8;
         }
         nav a {
             color: white;
@@ -36,7 +36,7 @@
             margin: 20px;
         }
         footer {
-            background-color: #333;
+            background-color: rgb(220, 165, 12);
             color: white;
             text-align: center;
             padding: 1rem 0;
@@ -74,7 +74,7 @@
         <p>This is a website for ideas</p>
     </section>
     <footer>
-        <p>&copy; 2025 My Website</p>
+        <p>&copy; Davide Kurek 2025 January</p>
     </footer>
 </body>
 </html>
