--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         nav {
             display: flex;
             justify-content: center;
-            background-color: #09f8f8;
+            background-color: #172ab3;
         }
         nav a {
             color: white;
