--- a/rocket_ship.html
+++ b/rocket_ship.html
@@ -19,7 +19,7 @@
         nav {
             display: flex;
             justify-content: center;
-            background-color: #333;
+            background-color:#172ab3;
         }
         nav a {
             color: white;
