--- a/paper_airplane.html
+++ b/paper_airplane.html
@@ -19,7 +19,7 @@
         nav {
             display: flex;
             justify-content: center;
-            background-color: #172ab3;;
+            background-color: #172ab3;
         }
         nav a {
             color: white;
@@ -56,6 +56,22 @@
     <section>
         <h2>Paper Airplane</h2>
         <p>Learn how to make a simple paper airplane. It's a fun and easy craft that flies well.</p>
+        <h3>Steps to Make a Paper Airplane:</h3>
+        <ol>
+            <li>Take a piece of A4 paper.</li>
+            <li>Fold the paper in half lengthwise.</li>
+            <li>Unfold the paper and fold the top two corners to the center crease.</li>
+            <li>Fold the peak down to the bottom edge of the paper.</li>
+            <li>Fold the top two corners to the center crease again.</li>
+            <li>Fold the paper in half along the original center crease.</li>
+            <li>Fold the wings down so the top edges meet the bottom edge of the body.</li>
+            <li>Your paper airplane is ready to fly!</li>
+        </ol>
+        <h3>Watch These YouTube Videos:</h3>
+        <ul>
+            <li><a href="https://www.youtube.com/watch?v=olg0M8OZz_o" target="_blank">How to Make a Paper Airplane</a></li>
+            <li><a href="https://www.youtube.com/watch?v=7KPaxKUDj6I" target="_blank">Best Paper Airplane for Long Flights</a></li>
+        </ul>
     </section>
     <footer>
         <p>&copy; 2025 My Website</p>
