--- a/paper_boat.html
+++ b/paper_boat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paper Boat</title>
+    <title>Rocket Ship</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -19,7 +19,7 @@
         nav {
             display: flex;
             justify-content: center;
-            background-color: #172ab3;;
+            background-color:#172ab3;
         }
         nav a {
             color: white;
@@ -48,14 +48,29 @@
 </head>
 <body>
     <header>
-        <h1>Paper Boat</h1>
+        <h1>Rocket Ship</h1>
     </header>
     <nav>
         <a href="index.html">Go Back</a>
     </nav>
     <section>
-        <h2>Paper Boat</h2>
-        <p>Make a paper boat that you can float on water. It's perfect for a rainy day activity.</p>
+        <h2>Rocket Ship</h2>
+        <p>This is my guide to make a rocket ship.</p>
+        <h3>How to Fold a Paper Boat</h3>
+        <ol>
+            <li>Take a rectangular piece of paper.</li>
+            <li>Fold it in half from top to bottom.</li>
+            <li>Fold the top corners down to the center line.</li>
+            <li>Fold the bottom edge up on both sides.</li>
+            <li>Open the paper and fold it into a diamond shape.</li>
+            <li>Fold the bottom corners up to the top point.</li>
+            <li>Open the paper again and pull the sides out to form the boat.</li>
+        </ol>
+        <h3>Watch These YouTube Videos:</h3>
+        <ul>
+            <li><a href="https://www.youtube.com/watch?v=1wu5oKy4m5s" target="_blank">How to Make a Paper Boat - Origami for Kids</a></li>
+            <li><a href="https://www.youtube.com/watch?v=HI0a5U1xWHw" target="_blank">Easy Paper Boat Tutorial</a></li>
+        </ul>
     </section>
     <footer>
         <p>&copy; 2025 My Website</p>
