--- a/paper_boat.html
+++ b/paper_boat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rocket Ship</title>
+    <title>Paper Boat</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -48,14 +48,14 @@
 </head>
 <body>
     <header>
-        <h1>Rocket Ship</h1>
+        <h1>Paper Boat</h1>
     </header>
     <nav>
         <a href="index.html">Go Back</a>
     </nav>
     <section>
-        <h2>Rocket Ship</h2>
-        <p>This is my guide to make a rocket ship.</p>
+        <h2>Paper Boat</h2>
+        <p>This is my guide to make a paper boat.</p>
         <h3>How to Fold a Paper Boat</h3>
         <ol>
             <li>Take a rectangular piece of paper.</li>
