--- a/rocket_ship.html
+++ b/rocket_ship.html
@@ -54,8 +54,30 @@
         <a href="index.html">Go Back</a>
     </nav>
     <section>
-        <h2>Rocket Ship</h2>
-        <p>This is my guide to make a rocket ship.</p>
+        <h2>How to Make a Rocket Ship Out of a Bottle</h2>
+        <p>This is a fun and easy way to make a rocket ship using a plastic bottle. Follow these steps:</p>
+        <h3>Materials Needed:</h3>
+        <ul>
+            <li>1 empty plastic bottle</li>
+            <li>4 fins made from cardboard or thick paper</li>
+            <li>1 cone made from paper</li>
+            <li>Tape or glue</li>
+            <li>Decorations like markers, stickers, or paint</li>
+        </ul>
+        <h3>Steps to Make Your Rocket Ship:</h3>
+        <ol>
+            <li>Wash and dry the plastic bottle.</li>
+            <li>Attach the fins to the bottom of the bottle using tape or glue. These will help your rocket stand up.</li>
+            <li>Make a cone out of paper and tape or glue it to the top of the bottle. This is the nose of your rocket.</li>
+            <li>Decorate your rocket ship with markers, stickers, or paint. Be creative and make it look cool!</li>
+            <li>Let everything dry if you used glue or paint.</li>
+            <li>Your rocket ship is ready! You can pretend it's flying to space.</li>
+        </ol>
+        <h3>Watch These YouTube Videos:</h3>
+        <ul>
+            <li><a href="https://www.youtube.com/watch?v=E9zpzxtj3sY" target="_blank">Make a Rocket Ship from a Plastic Bottle</a></li>
+            <li><a href="https://www.youtube.com/watch?v=RZzXuK9X2x4" target="_blank">DIY Rocket Ship Craft</a></li>
+        </ul>
     </section>
     <footer>
         <p>&copy; 2025 My Website</p>
