--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </section>
     <section id="roblox-tricks">
         <h2>Roblox Tricks</h2>
-        <h3><a href="players_game.html">2 Player Game</a></h3>
+        <h3><a href="player_game.html">2 Player Game</a></h3>
         <p>Do you want to learn how to play games with your friends?</p>
     </section>
     <section id="about">
