--- a/player_game.html
+++ b/player_game.html
@@ -55,7 +55,8 @@
     </nav>
     <section>
         <h2>2 Player Game</h2>
-        <p>To be replaced</p>
+        <p>pull a friend
+        team worck prison run</p>
     </section>
     <footer>
         <p>&copy; 2025 My Website</p>
