--- a/index.html
+++ b/index.html
@@ -56,14 +56,16 @@
         <a href="#about">About</a>
     </nav>
     <section id="papercrafts">
-        <h2>Papercrafts</h2>
-        <h3><a href="rocket_ship.html">Rocket ship</a></h3>
-        <p>This is my guide to make a rocket ship.</p>
-        <h3><a href="paper_airplane.html">Paper airplane</a></h3>
-        <p>Learn how to make a simple paper airplane. It's a fun and easy craft that flies well.</p>
-        <h3><a href="paper_boat.html">Paper boat</a></h3>
-        <p>Make a paper boat that you can float on water. It's perfect for a rainy day activity.</p>
-    </section>
+    <h2>Papercrafts</h2>
+    <h3><a href="rocket_ship.html">Rocket ship</a></h3>
+    <p>This is my guide to make a rocket ship.</p>
+    <h3><a href="paper_airplane.html">Paper airplane</a></h3>
+    <p>Learn how to make a simple paper airplane. It's a fun and easy craft that flies well.</p>
+    <h3><a href="paper_boat.html">Paper boat</a></h3>
+    <p>Make a paper boat that you can float on water. It's perfect for a rainy day activity.</p>
+    <h3><a href="working_boomerang.html">Working boomerang</a></h3>
+    <p>Make a boomerang that actually returns to you.</p>
+</section>
     <section id="roblox-tricks">
         <h2>Roblox Tricks</h2>
         <h3><a href="player_game.html">2 Player Game</a></h3>
