my second revie

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
         <p>This is a website for ideas</p>
     </section>
     <footer>
-        <p>&copy; Davide Kurek 2025 January</p>
+        <p>&copy; 2025 Paper Crafts. All rights reserved.</p>
+        <p>Created by Davide Kurek</p>
     </footer>
 </body>
 </html>
