--- a/paper_boat.html
+++ b/paper_boat.html
@@ -73,7 +73,8 @@
         </ul>
     </section>
     <footer>
-        <p>&copy; 2025 My Website</p>
+        <p>&copy; 2025 Paper Crafts. All rights reserved.</p>
+        <p>Created by Davide Kurek</p>
     </footer>
 </body>
 </html>
