--- a/player_game.html
+++ b/player_game.html
@@ -59,7 +59,8 @@
         team worck prison run</p>
     </section>
     <footer>
-        <p>&copy; 2025 My Website</p>
+        <p>&copy; 2025 Paper Crafts. All rights reserved.</p>
+        <p>Created by Davide Kurek</p>
     </footer>
 </body>
 </html>
