my_changes on sunday

--- a/working_boomerang.html
+++ b/working_boomerang.html
@@ -93,12 +93,13 @@
             </li>
             <li>
                 Test throw your boomerang by holding it vertically and flicking it with a snap of your wrist.
-                <img src="images/step5-throwing.jpg" alt="Throwing position" style="max-width: 300px; display: block; margin: 10px 0;">
-            </li>
+                 <!-- <img src="images/step5-throwing.jpg" alt="Throwing position" style="max-width: 300px; display: block; margin: 10px 0;">
+            -->
+                </li>
             <li>
                 Practice throwing in an open space away from people and objects.
-                <img src="images/step6-practice.jpg" alt="Practice area" style="max-width: 300px; display: block; margin: 10px 0;">
-            </li>
+                <!--<img src="images/step6-practice.jpg" alt="Practice area" style="max-width: 300px; display: block; margin: 10px 0;">
+            --></li>
         </ol>
         <h3>Tips for Success:</h3>
         <ul>
