my change player 2

--- a/player_game.html
+++ b/player_game.html
@@ -56,7 +56,8 @@
     <section>
         <h2>2 Player Game</h2>
         <p>pull a friend   
-        team worck prison run</p>
+        team work prison run
+    dog walk</p>
     </section>
     <footer>
         <p>&copy; 2025 Paper Crafts. All rights reserved.</p>
