--- a/player_game.html
+++ b/player_game.html
@@ -57,7 +57,7 @@
         <h2>2 Player Game</h2>
         <p>pull a friend   
         team work prison run
-    dog walk bapcia</p>
+    dog walk</p>
     </section>
     <footer>
         <p>&copy; 2025 Paper Crafts. All rights reserved.</p>
