--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
 </section>
     <section id="roblox-tricks">
         <h2>Roblox Tricks</h2>
+        <h3><a href="zombie_shooter.html">Zombie Shooter Game</a></h3>
+        <p>Test your reflexes in this exciting zombie shooter game! Shoot the zombies before they reach you and see how long you can survive.</p>
         <h3><a href="player_game.html">2 Player Game</a></h3>
         <p>Do you want to learn how to play games with your friends?</p>
     </section>
